# ImportAR

./: .dockerignore  .env_example  .gitignore  Dockerfile  Hitorias de usuario- sprint 1 (3).xlsx  QUICK-START-DOCKER.md  README.md  docker-compose.yml  pyproject.toml  wsgi.py
app/: __init__.py
app/config/: config.py  domain_constants.py
app/mapping/: __init__.py  articulo_schema.py  auth_schema.py  message_schema.py  usuario_schema.py
app/models/: __init__.py  articulo.py  presupuesto.py  simulacion.py  usuario.py
app/repositories/: __init__.py  base_repository.py  presupuesto_repository.py  simulacion_repository.py  usuario_repository.py
app/resource/: __init__.py  auth_resource.py  calculadora_resource.py  home_resource.py  presupuesto_resource.py  simulacion_resource.py  usuario_resource.py
app/service/: EjemploCommand.py  __init__.py  apidolar_service.py  auth_service.py  calculadora_service.py  encrypter_service.py  fx_service.py  message.py  presupuesto_service.py  simulacion_service.py  simulacion_tareas.py  usuario_service.py
data/: ib_buffer_pool
document/: class_diagram.puml  secquence_diagram.puml
test/: __init__.py  presupuesto_service.py  similacion_service.py  simulacion_service.py  test_apidolar_service.py  test_auth_service.py  test_db.py  test_encrypter.py  test_presupuesto.py  test_simulacion.py  test_usuario.py  usuario_service.py
