[project]
name = "importar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask==3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "mysql-connector-python==9.4.0",
    "passlib==1.7.4",
    "pyrefly>=0.28.1",
    "sqlalchemy>=2.0.43",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
