[project]
name = "importar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faker==37.11.0",
    "flask==3.1.1",
    "flask-marshmallow==1.3.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow-sqlalchemy==1.4.2",
    "mysql-connector-python==9.4.0",
    "passlib==1.7.4",
    "pyrefly>=0.35.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
